--- a/reset.css
+++ b/reset.css
@@ -16,7 +16,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-family: inherit;
 	vertical-align: baseline;
 }
-/* remember to define focus styles! */
 :focus {
 	outline: 0;
 }
@@ -28,7 +27,7 @@ body {
 ol, ul {
 	list-style: none;
 }
-/* tables still need 'cellspacing="0"' in the markup */
+
 table {
 	border-collapse: separate;
 	border-spacing: 0;
@@ -43,6 +42,6 @@ q:before, q:after {
 }
 blockquote, q {
 	quotes: "" "";
-}/* CSS Document */
+}
 
 
